# healthy_habit_tracker

./: .env.docker.sample  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: api_views.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py
habits/migrations/: 0001_initial.py  0002_alter_habit_options.py  0003_alter_habit_time_to_action.py  0004_alter_habit_user.py
users/: api_views.py  models.py  serializers.py  urls.py
users/management/commands/: cu.py
users/migrations/: 0001_initial.py  0002_user_role.py  0003_user_telegram_id.py
